# UFOTree

./: .gitattributes  .gitignore  .gitmodules  .rc_tree.h.swp  .swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  \  a.out  abseil_only_nums.txt  abseil_vector_nums.txt  cmake_install.cmake  compile_commands.json  dynamic_tree_tests  rc_tree.h  std_nums.txt  test.cpp
.cache/clangd/index/: acquire_retire.h.A84AF262526A9981.idx  alloc.h.C3C26C17F43F0A8A.idx  atomic_wait.h.A5170881E515A768.idx  block_allocator.h.640EBC5E7FAC2B58.idx  debug_uninitialized.h.5A8B0BE3820674A1.idx  gmock-actions.h.50184E0E17F2F0BC.idx  gmock-all.cc.1D1275C8DC329AA5.idx  gmock-cardinalities.cc.3017ACC90C791233.idx  gmock-cardinalities.h.1722F69B415BAFFD.idx  gmock-function-mocker.h.96C6E4F27B5720F9.idx  gmock-generated-actions.h.E362E66B6C67A1DB.idx  gmock-internal-utils.cc.6F7E0ED9C348192B.idx  gmock-internal-utils.h.EAC5582F2CBEF9BA.idx  gmock-matchers.cc.26968A966476F8BA.idx  gmock-matchers.h.09D9D757A58A1483.idx  gmock-matchers.h.F9DD090711D26F19.idx  gmock-more-actions.h.49B008F218E6332E.idx  gmock-more-matchers.h.3BA9FC7C7E8067E3.idx  gmock-nice-strict.h.14D09747EE241E5C.idx  gmock-port.h.4218CE97A6259611.idx  gmock-port.h.A4EF0983AF4F3AB9.idx  gmock-pp.h.E13F785E9346D01B.idx  gmock-spec-builders.cc.1E1512262FC8A265.idx  gmock-spec-builders.h.27F9933E13A84D42.idx  gmock.cc.35DF5DE915D70EBA.idx  gmock.h.673E34C1988967B1.idx  gmock_main.cc.A37FE2359227A6C0.idx  gtest-all.cc.DFC2F57F9752415E.idx  gtest-assertion-result.cc.E998EEC4A52E7F74.idx  gtest-assertion-result.h.AA00A770EF448487.idx  gtest-death-test-internal.h.5E72DAEEB580D8F4.idx  gtest-death-test.cc.5F8F3F7F7376FC92.idx  gtest-death-test.h.626701BD619C94C7.idx  gtest-filepath.cc.F632D6EEEE380452.idx  gtest-filepath.h.F8940EFDD563D784.idx  gtest-internal-inl.h.652BB84370529FF8.idx  gtest-internal.h.C2359CB1F034A83E.idx  gtest-matchers.cc.F16273485A4AACF6.idx  gtest-matchers.h.D297DEC09C6BAD61.idx  gtest-message.h.830BFE19E81590CD.idx  (+44 more)
.cmake/api/v1/reply/: cache-v2-b17e561895faeb5693b2.json  cmakeFiles-v1-b909c32f929f9315b9c5.json  codemodel-v2-43cafcd700937b82806c.json  directory-_deps.parlaylib-src-Debug-9b7cfebaf595254f8cb5.json  index-2024-03-22T11-49-29-0134.json  (+7 more)
.github/workflows/: cmake.yml
aspen/: api.h  aspen.h  immutable_graph.h
baselines/dynamic_trees/empty_top_tree/: empty_top_tree.c  empty_top_tree.h  main
baselines/dynamic_trees/top_tree/: debug.h  input  kruskal.h  top_tree.c  top_tree.h  tree.c  tree.h
baselines/pam/: augmented_map.h  basic_node.h  gc.h  map.h  pam.h  treap.h
baselines/parett/utilities/: blockRadixSort.h  concurrentMap.h  deterministicHash.h  hash_pair.hpp  parse_command_line.h  seq.h  sequence_ops.h  transpose.h  utils.h
baselines/stt/empty_top_tree/: Makefile  README.md  empty_top_tree.c  empty_top_tree.h  empty_tree.c  empty_tree.h  kruskal.c
baselines/stt/top_tree/: debug.c  main.c  top_tree.c  top_tree.h  tree.c  tree.h
baselines/utilities/include/: utils.h
benchmark/: abseil_only.cpp  benchmark.h  benchmark_forest_structures.cpp  benchmark_graph_algorithms.cpp  benchmark_graph_statistics.cpp  benchmark_graph_update_speed.cpp  benchmark_peak_space.cpp  benchmark_query_speed.cpp  benchmark_root_clusters.cpp  benchmark_runner.cpp  benchmark_update_speed.cpp  graph_benchmark.h  lcufo_bench_runner.cpp  nums.txt  parallel_benchmark.h  parallel_benchmark_runner.cpp  plot_time_space.py  runner_abseil_vector.cpp
benchmark/dynamic_sequences/: benchmark_sequences.cpp
benchmark/dynamic_trees/: benchmark.h  benchmark_peak_space.cpp  benchmark_queries_diameter_sweep.cpp  benchmark_query_speed.cpp  benchmark_update_speed.cpp  benchmark_updates_diameter_sweep.cpp
benchmark/graph_algorithms/: benchmark_graph_algorithms.cpp  benchmark_graph_statistics.cpp  benchmark_graph_update_speed.cpp  benchmark_graph_update_speed_parallel.cpp  graph_benchmark.h
benchmark/parallel/: parallel_benchmark.h  parallel_benchmark_diameter_sweep.cpp  parallel_benchmark_n_sweep.cpp  parallel_benchmark_runner.cpp  parallel_cluster_benchmark.h  parallel_cluster_benchmark_runner.cpp
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  dynamic_tree_tests
include/: dgbs.h  fast_ufo_tree.h  hdt_ufo_tree.h  parallel_topology_cluster.h  parallel_topology_tree.h  parallel_topology_tree_ternarized.h  parallel_ufo_cluster.h  parallel_ufo_tree.h  random_tree_gen.h  rc_tree.h  spaa_rc_tree.h  spaa_rc_tree_ternarized.h  ternarizable_interface.h  ternarized_tree.h  top_tree.h  topology_tree.h  types.h  ufo_cluster.h  ufo_tree.h  ufo_tree_abseil.h  ufo_tree_vector_gone.h  util.h
include/forest_structures/: forest_strucure.h  sequential_forest.h
include/parallel_clusters/: parallel_ufo_cluster_PAM.h  parallel_ufo_cluster_abseil_set.h  parallel_ufo_cluster_unordered_set.h
scripts/: diameter_sweep_experiments.sh  diameter_sweep_parellel_update_10000000_1000000_final.csv  graph_experiments.sh  mini_experiments.sh  n_sweep_parellel_update_final.csv  par_update_speed_experiments.sh  peak_space_experiments.sh  plot_diameter_sweep.py  plot_diameter_sweep_parallel.py  plot_diameter_sweep_sequential.py  plot_n_sweep_parallel_updates.py  plot_par_update_results.py  plot_results.py  plot_seq_update_results.py  plot_space_results.py  query_speed_experiments.sh  size_sweep_experiments.sh  update_speed_experiments.sh
src/: hdt_ufo_tree.cpp  main.cpp
test/: euler_tour_tree_tests.cpp  hdt_tests.cpp  incremental_mst_test.cpp  iufo_tree_tests.cpp  link_cut_tree_tests.cpp  par_rc_ternarized_tests.cpp  par_rc_tests.cpp  par_tern_topology_tests.cpp  parallel_mis_tests.cpp  parallel_test_runner.cpp  parallel_topology_tree_tests.cpp  parallel_ufo_tree_tests.cpp  rc_tree_tests.cpp  ternarization_tests.cpp  test_rc_tree.cpp  test_runner.cpp  test_ternarization.cpp  top_tree_tests.cpp  topology_tree_tests.cpp  ufo_tree_tests.cpp
util/: aggregator.h  array_pool_allocator.h  bridge.h  graph_utils.h  group.h  hash_bag.h  hash_bag_util.h  samplesort.h  semisort.h  sparse_table.h  types.h  util.h
(+35 files in other folders)
